<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Allgemein" Id="{f6fa08ff-a5e4-41f4-9d08-c1b0b96d666c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	ImExport : MyStruct;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>